--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                                         Рост: 1,75 м<br>
                                                         Вес: 73 кг<br>
 						</p>
-						<img src="https://fcdynamo.com/img/img/d9247477-6d6b-490e-8276-f67e5e5bc3db/1449933700-orig.jpg">
+						<img src="https://dynamo.kiev.ua/media/posts/2023/09/22/mihaylichenko12.jpg">
 					</div>
 					<p>БОГДАН МИХАЙЛІЧЕНКО</p>
 				</article>
