--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                                         Рост: 1,75 м<br>
                                                         Вес: 73 кг<br>
 						</p>
-						<img src="https://dynamo.kiev.ua/media/posts/2023/09/22/mihaylichenko12.jpg">
+						<img src="https://zn.ua/img/article/5800/48_main-v1706193611.jpg">
 					</div>
 					<p>БОГДАН МИХАЙЛІЧЕНКО</p>
 				</article>
